// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options selectedCardKeys when given should set the select state of the item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [
      1,
    ],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": true,
      "key": 1,
    },
  ],
}
`;

exports[`Options selection allowSelectAll when it is false and selection mode is 'multiple' selection should not work 1`] = `[]`;

exports[`Options selection allowSelectAll when it is true and selection mode is 'multiple' selection should not work 1`] = `
[
  {
    "locateInMenu": "auto",
    "location": "before",
    "name": "selectAllButton",
    "options": {
      "disabled": false,
      "icon": "selectall",
      "onClick": [Function],
      "text": "Select all",
    },
    "widget": "dxButton",
  },
  {
    "locateInMenu": "auto",
    "location": "before",
    "name": "clearSelectionButton",
    "options": {
      "disabled": true,
      "icon": "close",
      "onClick": [Function],
      "text": "Clear selection",
    },
    "widget": "dxButton",
  },
]
`;

exports[`Options selection allowSelectAll when it is true and selection mode isn't 'multiple' selection should not work 1`] = `[]`;

exports[`Options selection mode when it is 'none' and the selectedCardKeys is specified selection should not apply 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": false,
      "key": 1,
    },
  ],
}
`;

exports[`Options selection mode when it is 'none' selection should not work 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": false,
      "key": 1,
    },
  ],
}
`;
